demo: update to use new unified point syntax for textures

--- a/demos/scene.yaml
+++ b/demos/scene.yaml
@@ -72,10 +72,6 @@ styles:
                     // Shade by building height
                     color.rgb = vec3(min((worldPosition().z*.0005 + .65), .8));
 
-    icons:
-        base: points
-        texture: icons
-
     dashed:
         base: lines
         dash: [2, 1]
@@ -444,7 +440,8 @@ layers:
             # oneway arrows and shields are distinct groups!
             filter: { oneway: yes, shield_text: false, $zoom: { min: 17 } }
             draw:
-                icons:
+                points:
+                    texture: icons
                     sprite: arrow
                     size: [[17, 18px], [18, 20px], [20, 32px]]
                     placement: spaced
@@ -456,7 +453,8 @@ layers:
                 network: 'US:I' # US interstates only in this demo
                 shield_text: true
             draw:
-                icons:
+                points:
+                    texture: icons
                     sprite: shield
                     # sprite: function() { return feature.network }
                     priority: 2
@@ -477,7 +475,7 @@ layers:
             thinning:
                 filter: { $zoom: { max: 11 } }
                 draw:
-                    icons:
+                    points:
                         repeat_distance: 75px
 
     buildings:
@@ -536,7 +534,8 @@ layers:
 
         # all POIs are interactive
         draw:
-            icons:
+            points:
+                texture: icons
                 interactive: true
 
         parks:
@@ -546,8 +545,11 @@ layers:
                     - { $zoom: { min: 16 } }
                     - { area: { min: 500px2 } }
             draw:
-                icons:
+                points:
                     sprite: tree
+                    # texture: null
+                    # color: red
+                    # outline: { width: 2px, color: white }
                     priority: 2
                     size: 16px
                     text:
@@ -583,7 +585,7 @@ layers:
                     kind: [peak, viewpoint, bicycle_rental, car_sharing, park, forest, cemetery, graveyard]
                 $zoom: { min: 15 }
             draw:
-                icons:
+                points:
                     size: [[13, 12px], [15, 18px]]
                     priority: 6
 
@@ -593,7 +595,7 @@ layers:
                     - { $zoom: { min: 17 } }
                     - { $zoom: { min: 16 }, kind: station }
                 draw:
-                    icons:
+                    points:
                         text:
                             text_source: global.language_text_source
                             font:
@@ -604,37 +606,37 @@ layers:
             # add generic icon at high zoom
             generic:
                 filter: { $zoom: { min: 18 } }
-                draw: { icons: { sprite: info } }
+                draw: { points: { sprite: info } }
 
             # examples of different icons mapped to feature properties
             icons:
                 restaurant:
                     filter: { kind: [restaurant] }
-                    draw: { icons: { sprite: restaurant } }
+                    draw: { points: { sprite: restaurant } }
                 cafe:
                     filter: { kind: [cafe, convenience] }
-                    draw: { icons: { sprite: cafe } }
+                    draw: { points: { sprite: cafe } }
                 bar:
                     filter: { kind: [bar, pub] }
-                    draw: { icons: { sprite: bar } }
+                    draw: { points: { sprite: bar } }
                 culture:
                     filter: { kind: [museum, library, church, place_of_worship, bank] }
-                    draw: { icons: { sprite: museum } }
+                    draw: { points: { sprite: museum } }
                 station:
                     filter: { kind: [station] }
-                    draw: { icons: { sprite: train, priority: 2, optional: true } }
+                    draw: { points: { sprite: train, priority: 2, optional: true } }
                 hospital:
                     filter: { kind: [hospital, pharmacy] }
-                    draw: { icons: { sprite: hospital } }
+                    draw: { points: { sprite: hospital } }
                 hotel:
                     filter: { kind: [hotel, hostel] }
-                    draw: { icons: { sprite: hotel } }
+                    draw: { points: { sprite: hotel } }
                 bus_stop:
                     filter: { kind: [bus_stop] }
-                    draw: { icons: { sprite: bus } }
+                    draw: { points: { sprite: bus } }
                 bookstore:
                     filter: { kind: [bookstore] }
-                    draw: { icons: { sprite: bookstore } }
+                    draw: { points: { sprite: bookstore } }
 
     boundaries:
         data: { source: mapzen}
